# terminal-jarvis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE_v0.0.74.md  LICENSE  PHILOSOPHY.md  PLAN.md  README.md  REFACTOR.md  SECURITY.md  TESTING_COMMANDS.md  VOICE.md  ai-tools-registry.toml  audit.toml  build.rs  config.toml  deny.toml  install_go.sh  jarvis.sh  mutants.toml  terminal-jarvis.toml  terminal-jarvis.toml.example  test-qa.sh  test_completion.rs  test_hybrid_menu.rs  test_infinite_menu.rs  test_tool_exits.sh  tools-manifest.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
adk/: .env.example  README.md  agent.py  go.mod  go.sum  jarvis.py  main.go  providers.py  requirements.txt  tools.py
config/: api.toml  metadata.toml  templates.toml  user-preferences.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTIONS.md  DIAGRAM.md  INSTALLATION.md  LIMITATIONS.md  MAINTAINERS.md  MULTIPLATFORM_BUILD.md  ROADMAP.md  SECURITY_REPORT.md  SOURCES.md  TESTING.md  USAGE.md  VERSION_CACHING.md  WIP_FINDINGS.md  architecture.md  development.md  distribution-hardening.md  harness-capability-contract.md  index.md  maintainer-guide.md  migration.md  release-plan.md  security-gates.md  support-matrix.md  supported-agents.md  testing.md
e2e/: README.md  THEME-TESTS-SUMMARY.md  error-handling.test.ts  evals-menu.test.ts  help.test.ts  helpers.ts  index.test.ts  npm-pack.test.ts  package-lock.json  package.json  resize-example.test.ts  responsive-edge-cases.test.ts  setup.ts  theme-switching.test.ts  tsconfig.json  version.test.ts  vitest.config.ts  welcome.test.ts
evaluation/: EVALUATION.md  run.cmd  run.ps1  run.sh  unsupported-transcript.txt
homebrew/: README.md
npm/: package.json.tmpl
plan/: 01-contract-and-baseline.md  01-tj-hardening-baseline-and-success.md  02-product-truth.md  02-tj-hardening-ux-contract.md  03-conformance-evidence.md  03-tj-hardening-environment-diagnostics.md  04-release-candidate.md  04-tj-hardening-presentation-consistency.md  05-tj-hardening-harness-support-model.md  06-tj-hardening-harness-conformance.md  07-tj-hardening-distribution-parity.md  08-tj-hardening-demo-fixture.md  09-tj-hardening-zero-cost-showcase.md  10-tj-hardening-sandbox-requirements.md  11-tj-hardening-kernel-pty-proof.md  12-tj-hardening-provider-selection.md  13-tj-hardening-hosted-demo.md  14-tj-hardening-abuse-cost-operations.md  15-tj-hardening-ci-release-integration.md  16-tj-hardening-docs-and-feedback.md  17-tj-hardening-rollout-readiness.md  README.md  ROADMAP.md  STRATEGIC-ROADMAP.md  deferred-hosted-demo.md  index.md  phase-1-ux-streamlining.md  phase-10-modern-architecture.md  phase-2-voice-feature.md  phase-3-testing-quality.md  phase-4-distribution.md  phase-5-first-run-magic.md  phase-6-release-automation.md  phase-7-navigation-hardening.md  phase-8-credential-intelligence.md  phase-9-ecosystem-growth.md
scratch/: opencode-goal-active.md
screenshot_and_demo/: tjarvis-ascii.txt
scripts/: assemble-evaluation-kit.py  check-delivery-matrix.py  check-distribution-payloads.sh  check-plan.rb  core-command-matrix.sh  create-homebrew-release.sh  delivery-matrix.sh  generate-support-report.sh  integration-hardening.sh  local-cd.sh  local-ci.sh  local-cicd.sh  manual_auth_test.sh  package-release.sh  phase03-adversarial-report.sh  phase03-catalog-report.sh  phase03-parity.sh  quick-ci.sh  release-preflight.sh  release.toml  rollback-rehearsal.sh  security-check.sh  smoke-test.sh  status.sh  sync-docs-site.sh  test-core-functionality.sh  test-homebrew-formula.sh  test-opencode-fix.sh  tj-fast.sh  tj-local.sh  verify-evaluation-kit.py  verify.sh  workflow-dashboard.sh
src/: ai_tools_registry.rs  api.rs  api_base.rs  api_client.rs  auth_manager.rs  cli.rs  cli_logic.rs  config.rs  distribution.rs  installation_arguments.rs  lib.rs  main.rs  platform.rs  progress_utils.rs  services.rs  theme.rs  theme_config.rs  tools.rs
tests/: auth_behavior_tests.rs  benchmarks_tests.rs  catalog_contract_tests.rs  catalog_freshness_tests.rs  catalog_loader_strict_tests.rs  catalog_truth_tests.rs  catalog_validation_tests.rs  cli_args_tests.rs  cli_auth_cache_tests.rs  cli_catalog_fallback_tests.rs  cli_compat_surface_tests.rs  cli_e2e_tests.rs  cli_help_tests.rs  cli_integration_tests.rs  cli_presentation_tests.rs  cli_run_compat_tests.rs  cli_session_tests.rs  cli_version_tests.rs  codex_functionality_tests.rs  config_tests.rs  context_tests.rs  copilot_integration_tests.rs  edge_contract_tests.rs  evals_framework_tests.rs  exit_command_handling_tests.rs  experimental_tests.rs  gate_tests.rs  (+37 more)
(+784 files in other folders)
