[package]
name = "terminal-jarvis"
version = "0.0.76"
edition = "2021"
description = "A thin Rust wrapper that provides a unified interface for managing and running AI coding tools"
authors = ["BA-CalderonMorales"]
license = "MIT"
repository = "https://github.com/BA-CalderonMorales/terminal-jarvis"
homepage = "https://github.com/BA-CalderonMorales/terminal-jarvis"
readme = "README.md"
keywords = ["cli", "ai", "tools", "wrapper"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "config/**",
    "config.toml",
    "terminal-jarvis.toml.example",
]

[[bin]]
name = "terminal-jarvis"
path = "src/main.rs"

[lib]
name = "terminal_jarvis"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.58"
tokio = { version = "1.47.1", features = ["full"] }
# Use rustls for TLS to enable static linking with musl (Issue #24 - GLIBC independence)
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
toml = "0.9.8"
dirs = "6.0.0"
inquire = "0.9.1"
terminal_size = "0.4.3"
indicatif = "0.18.3"
signal-hook = "0.3.18"
libc = { version = "0.2.177", optional = false }
unicode-width = "0.2.2"
tempfile = "3.23.0"
regex = "1.12.1"
chrono = { version = "0.4.42", features = ["serde"] }

# Security dependencies
sha2 = "0.10.9"

# Database (Turso/libSQL for modern config storage)
libsql = "0.9"

# Async trait for voice providers
async-trait = "0.1.89"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4.4"

# cargo-binstall support: download pre-built binaries from GitHub releases
# Users can install with: cargo binstall terminal-jarvis
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Platform-specific overrides for GitHub release naming
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-mac.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-mac.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-linux.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-linux.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-linux.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-linux.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-windows.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/terminal-jarvis-windows.tar.gz"
