[package]
name = "terminal-jarvis"
version = "0.1.10"
edition = "2021"
description = "A data-driven harness switcher for AI coding agents"
authors = ["BA-CalderonMorales"]
license = "MIT"
repository = "https://github.com/BA-CalderonMorales/terminal-jarvis"
homepage = "https://github.com/BA-CalderonMorales/terminal-jarvis"
readme = "README.md"
keywords = ["cli", "ai", "agents", "harness"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/build.rs",
  "/src/**",
  "/harnesses/**",
  "/tests/**",
  "/docs/*.md",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
]

[[bin]]
name = "terminal-jarvis"
path = "src/main.rs"

[lib]
name = "terminal_jarvis"
path = "src/lib.rs"

[dependencies]
